Fix chart visibility check routine #68

--- a/digiplan/static/scss/components/_charts.scss
+++ b/digiplan/static/scss/components/_charts.scss
@@ -9,9 +9,3 @@
   width: 100%;
   height: 300px;
 }
-
-#chart5,
-#chart6 {
-  width: 100%;
-  height: 400px;
-}
